--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,24 @@
+@import 'reset';
+@import 'fonts';
+@import 'vars';
+
+html {
+	color: $font-color-primary;
+	font-family: $font-primary;
+	font-size: 18px;
+	line-height: $line-height-primary;
+	@media screen and (max-width: $desktopWidth) {font-size: 16px}
+	@media screen and (max-width: $tableWidth) {font-size:	15px}
+	@media screen and (max-width: $phoneWidth) {font-size:	14px}
+}
+
 body {
     display: flex;
     justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 h1 {
-    color: #888;
+    
 }
